--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
 		android:theme="@style/AppTheme">
 		<activity
 			android:name=".ui.activity.MainActivity"
-			android:label="@string/app_name">
+			android:label="@string/app_name"
+			android:theme="@style/AppTheme..Toolbar">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
