--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
 		<activity
 			android:name=".ui.activity.MainActivity"
 			android:label="@string/app_name"
+			android:screenOrientation="portrait"
 			android:theme="@style/AppTheme..Toolbar">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
@@ -21,6 +22,10 @@
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
+		<activity
+			android:name=".ui.activity.ImagePinchZoomActivity"
+			android:screenOrientation="portrait"
+			android:theme="@style/AppTheme..Toolbar"/>
 
 		<service android:name=".service.PostsService"/>
 
