--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
 			android:name=".ui.activity.MainActivity"
 			android:label="@string/app_name"
 			android:screenOrientation="portrait"
-			android:theme="@style/AppTheme..Toolbar">
-			<intent-filter>
+			android:theme="@style/AppTheme.Toolbar.TranslucentStatus">
+		<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
 				<category android:name="android.intent.category.LAUNCHER"/>
@@ -25,7 +25,7 @@
 		<activity
 			android:name=".ui.activity.ImagePinchZoomActivity"
 			android:screenOrientation="portrait"
-			android:theme="@style/AppTheme..Toolbar"/>
+			android:theme="@style/AppTheme.Toolbar.TranslucentStatus"/>
 
 		<service android:name=".service.PostsService"/>
 
