--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,14 @@
 			android:label="@string/app_name"
 			android:screenOrientation="portrait"
 			android:theme="@style/AppTheme.Toolbar.TranslucentStatus">
-		<intent-filter>
+			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
 		<activity
-			android:name=".ui.activity.ImagePinchZoomActivity"
+			android:name=".ui.activity.ImageActivity"
 			android:screenOrientation="portrait"
 			android:theme="@style/AppTheme.Toolbar.TranslucentStatus"/>
 
