--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
 			android:name=".ui.activity.ImageActivity"
 			android:screenOrientation="portrait"
 			android:theme="@style/AppTheme.Toolbar.TranslucentStatus"/>
+		<activity
+			android:name=".ui.activity.ImagePagerActivity"
+			android:screenOrientation="portrait"
+			android:theme="@style/AppTheme.Toolbar.TranslucentStatus"/>
 
 		<service android:name=".service.PostsService"/>
 
