--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.github.chrisbanes.photoview:library:1.2.3'
+    compile 'com.android.support:cardview-v7:21.0.3'
 }
