--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,13 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.github.chrisbanes.photoview:library:1.2.3'
     compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.facebook.stetho:stetho:1.0.1'
+    compile 'com.facebook.stetho:stetho-okhttp:1.0.1'
+    compile 'com.facebook.stetho:stetho-urlconnection:1.0.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.2.2@aar') {
         transitive = true;
     }
