--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
 		android:theme="@style/AppTheme">
 		<activity
 			android:name=".ui.activity.MainActivity"
+			android:configChanges="keyboard|screenSize|orientation"
 			android:label="@string/app_name"
-			android:screenOrientation="portrait"
 			android:theme="@style/AppTheme.Toolbar.TranslucentStatus">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
@@ -25,11 +25,11 @@
 		</activity>
 		<activity
 			android:name=".ui.activity.ImageActivity"
-			android:screenOrientation="portrait"
+			android:configChanges="keyboard|screenSize|orientation"
 			android:theme="@style/AppTheme.Toolbar.TranslucentStatus"/>
 		<activity
 			android:name=".ui.activity.ImagePagerActivity"
-			android:screenOrientation="portrait"
+			android:configChanges="keyboard|screenSize|orientation"
 			android:theme="@style/AppTheme.Toolbar.TranslucentStatus"/>
 
 		<service android:name=".service.PostsService"/>
